css/style.scss
---
---
@import url(http://fonts.googleapis.com/css?family=Rajdhani:300,400,500,600,700);

$main-green: rgba(40,219,161,1);
$sub-green: rgba(40,219,161,0.5);
$light-grey: rgba(0,0,0,0.25);
$dark-grey: #303036;
$off-white: #FFFAFF;

* {
  font-family: Rajdhani;
}

#avatar {
  max-width: 150px;
}



.vex.vex-theme-wireframe {
  padding-top: 10px !important;
  .vex-content {
    width: 600px !important;
    background: $dark-grey !important;
    border: none !important;
    img {
      max-width: 100%;
    }
    h2 {
      i {
        color: $main-green;
      }
    }
    p {
      color: $sub-green !important;
    }
  }
}

.pure-g > div {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

body {
  background-color: $dark-grey;
  color: $dark-grey;
  #alertbar {
    z-index: 99;
    position: fixed;
    width: 100%;
    height: 40px;
    background-color: rgba(48,188,237,0.9);
    span {
      font-family: helvetica;
      padding: 0.5em;
      display: block;
      text-align: center;
      color: $off-white;
      font-size: 1.25em;
    }
    &.invisible {
      visibility: hidden;
    }
  }
}

.center-me {
  text-align: center;
  margin: 0 auto;
}

.circle-img {
  border-radius: 150%;
  border: 5px solid #ddd;
  transition: 1s;
  &.darken {
    transition: 1s;
    border-color: $main-green;
  }
  &.avatar {
    border-color: $light-grey;
    cursor: pointer;
  }
}

#panel {
  background-color: $off-white;
  a {
    color: $main-green;
    text-decoration: none;
    border-bottom: 1px dotted $sub-green;
    transition: 0.5s;
    &:visited {
      transition: 0.5s;
      color: $main-green;
    }
    &:hover {
      transition: 0.5s;
      color: #00A896
    }
    &:active {
      transition: 0.5s;
      color: #02C39A
    }
  }
  div.referral {
    min-height: 400px;
    transition: 0.5s;
    padding: 3.25em;
    background-color: none;
    font-weight: 300;
    p {
      transition: 1s;
      font-size: 1.3em;
      line-height: 2em;
      span {
        color: $main-green;
      }
    }
    img {
      max-width: 110px;
      cursor: pointer;
    }
  }
}

#home {
  padding: 2em 3em;
  h1 {
    font-size: 4.5em;
    span {
      font-size: 0.35em;
      font-weight: 300;
      color: $main-green;
    }
  }
  p {
    font-size: 2.5em;
    strong {
      font-weight: 500;
    }
  }
}

#updates {
  padding: 2em 4em;
  .title {
    font-size: 3em;
    font-weight: 700;
  }
  .date {
    font-size: 1.75em;
    font-weight: 300;
    padding-left: 0.5em;
  }
  .update {
    padding: 2em 0;
    border-bottom: 1px solid $light-grey;
  }
  article {
    line-height: 2em;
    img {
      max-width: 100%;
    }
    p {
      font-size: 1.25em;
    }
    a {
      font-weight: 600;
    }
  }
}

#photos {
  padding: 3em 0;
  img {
    padding: 2em 0 0em 0;
  }
  h2 {
    text-align: left;
    font-size: 1em;
  }
  p {
    font-size: 1em;
    text-align: left;
    line-height: 2em;
  }
  i {
    color: $main-green;
  }
  .caption {
    text-align: right;
    padding: 0 1.5em;
  }
}

#referrals {
  h1 {
    font-size: 3em;
  }
  p {
    font-size: 1.5em;
    line-height: 1.5em;
    padding: 0 3em;
  }
}

#profile {
  background-color: $dark-grey;
  ul.extra {
    padding: 0;
    li a {
      background-color: $sub-green;
      color: white;
    }
  }
  ul {
    padding: 0;
    margin: 0;
    &.pages li a {
      &:hover {
        transition: 1s;
        color: $sub-green;
        border-right: 2em solid $main-green;
      }
    }
  &.extra li a {
    &:hover {
        transition: 1s;
        color: $dark-grey;
        background-color: $main-green;
      }
  }
  }
  .menu, .extra-mobile, .pages-mobile { 
    display: none;
  }
  .menu {
    li {
      a {
        background-color: $main-green;
        text-align: center;
        color: $dark-grey;
        font-size: 2em;
        line-height: 2.25em;
        cursor: pointer;
        &:hover {
          background-color: $sub-green;
          border: none;
        }
      }
    }
  }
  &.collapsed {
    padding: 0;
    margin: 0;
    border: 0;
    #avatar {
      padding: 0;
      max-width:100%;
      width: 150px;
      img {
        border-radius: 0;
        border: none; 
      }
    }
    h1 {
      font-weight: 300;
      font-size: 1.25em;
    }
    span, .background, .theend, .extra-mobile, .pages-mobile {
      display: none;
    }
    ul.pages li:first-child {
      border-top: 1px solid $main-green;
    }
    ul {
      padding: 0;
      margin: 0;
      border-right: 1px solid $main-green;
      &.pages li a {
        &:hover {
          transition: 1s;
          color: $sub-green;
          border-right: 2em solid $main-green;
        }
        &.isActive {
          &:hover {
          color: $dark-grey;
          border-right: none;
        }
      }
    }
    &.extra li a:hover {
      transition: 1s;
      color: $dark-grey;
      background-color: $main-green;
    }
    li {
      a {
        line-height: 4em;
        font-size: 1em;
        &.isActive {
          background-color: $sub-green;
          color: $dark-grey;
        }
      }
    }
  }
}
#avatar {
  padding-top: 1em;
  max-width: 110px;
}
h1 {
  font-weight: 700;
  color: $main-green;
}
.background {
  font-weight: 300;
  color: white;
  padding: 0 1.5em;
  line-height: 1.75em;
}
ul {
  padding: 3em 0 0 0;
  margin: 0;
  li {
    a {
      color: $main-green;
      text-decoration: none;
      display: block;
      line-height: 4em;
      font-size: 1.25em;
      border-bottom: 1px solid $main-green;
    }
  }
}
p {
  color: white;
}
}

// media query hacks
@media screen and (max-width: 1023px) {
  #photos {
    h2 {
      text-align: left;
    }
    p {
      text-align: left;
      max-width: 360px;
      margin: 0 auto;
      padding-bottom: 2em;
    }
    .instagram_img {
      text-align: center;
   }
 }

 #home {
  h1 {
    font-size: 2.5em;
  }
  p {
    font-size: 1.5em;
  }
}

#panel {
  div.referral {
    min-height: 275px;
    padding: 3em 2em 0em 2em;
  }
}
#profile {
  #avatar {
   max-width: 150px;
 }
 .menu {
  display: block;
  background-color: $main-green;
  text-align: center;
  color: $dark-grey;
  font-size: 2em;
  line-height: 2.25em;
  cursor: pointer;
  transition: 0.5s;
  &:hover {
    transition: 0.5s;
    background-color: $sub-green;
    border: none;
  }
}
ul.pages-mobile, ul.extra-mobile {
  padding: 0;
  li {
    a {
      &:hover {
        transition: 1s;
        background-color: $sub-green;
        border-right: none;
      }
    }
  }
}
ul.extra-mobile {
  li {
    background-color: $sub-green;
    a {
      color: $off-white;
    }
  }
}
.extra, .pages, {
  display: none;
}
}
}

